--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,72 @@
+*, *:before, *:after {
+box-sizing: border-box;
+}
+
 body {
   background-color: #dadada;
   font-size: 10px;
+  font-size: 100%;
+  margin: 0 auto;
+  width: 100%;
+}
+
+/* .container{
+  width: 100%;
+} */
+
+.travel {
+  font-weight: bold;
+  padding: 5% 0;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+h1 {
+  width: 100%;
+}
+
+.preview {
+  height: 150px;
+  text-transform: capitalize;
+  padding-bottom: 4%;
+  width: 100%;
+}
+
+.baku {
+  background-image: url("../images/baku.jpg");
+  /* display: block; */
+  /* position: absolute;
+  top: 13%;
+  left: 38%; */
+}
+
+.london {
+  background-image: url("../images/london.png");
+  /* display: block; */
+  /* position: absolute;
+  top: 53%;
+  left: 38%; */
+}
+
+.madrid {
+  background-image: url("../images/madrid.jpg");
+  /* display: block; */
+  /* position: absolute;
+  top: 90%;
+  left: 38%; */
+}
+
+.rome {
+  background-image: url("../images/rome.jpg");
+  /* display: block; */
+  /* position: absolute;
+  top: 124%;
+  left: 38%; */
+}
+
+@media screen (min-width: 575px) {
+  .preview {float: left;
+            width: 48%;
+  }
+
 }
