--- a/css/style.css
+++ b/css/style.css
@@ -5,35 +5,30 @@ box-sizing: border-box;
 body {
   background-color: #dadada;
   font-size: 10px;
-  font-size: 100%;
-  margin: 0 auto;
-  width: 100%;
 }
 
-/* .container{
-  width: 100%;
-} */
-
-.travel {
+/* .container {
   font-weight: bold;
   padding: 5% 0;
   text-align: center;
   text-transform: uppercase;
-}
+} */
 
-h1 {
+/* h1 {
   width: 100%;
-}
+} */
 
-.preview {
-  height: 150px;
+/* .preview {
+  height: 15em;
+  /* margin: 0 auto; */
   text-transform: capitalize;
-  padding-bottom: 4%;
   width: 100%;
-}
+} */
 
 .baku {
   background-image: url("../images/baku.jpg");
+  background-size: cover;
+  background-position: left;
   /* display: block; */
   /* position: absolute;
   top: 13%;
@@ -42,6 +37,8 @@ h1 {
 
 .london {
   background-image: url("../images/london.png");
+  background-size: cover;
+  background-position: left;
   /* display: block; */
   /* position: absolute;
   top: 53%;
@@ -50,6 +47,8 @@ h1 {
 
 .madrid {
   background-image: url("../images/madrid.jpg");
+  background-size: cover;
+  background-position: left;
   /* display: block; */
   /* position: absolute;
   top: 90%;
@@ -58,15 +57,17 @@ h1 {
 
 .rome {
   background-image: url("../images/rome.jpg");
+  background-size: cover;
+  background-position: left;
   /* display: block; */
   /* position: absolute;
   top: 124%;
   left: 38%; */
 }
 
-@media screen (min-width: 575px) {
+/* @media screen (min-width: 575px) {
   .preview {float: left;
-            width: 48%;
+            width: 48%; */
   }
 
 }
