--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,13 @@ body {
   width: 100%;
 } */
 
-/* .preview {
-  height: 15em;
-  /* margin: 0 auto; */
-  text-transform: capitalize;
-  width: 100%;
-} */
+.preview {
+  /* height: 15em;
+  margin: 0 auto;
+  text-transform: capitalize; */
+  width: 380px;
+  height: 170px;
+}
 
 .baku {
   background-image: url("../images/baku.jpg");
