--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,9 @@ body {
 
 .baku {
   background-image: url("../images/baku.jpg");
-  background-size: cover;
+  background-size: contain;
   background-position: left;
+  background-repeat: no-repeat;
   /* display: block; */
   /* position: absolute;
   top: 13%;
@@ -38,8 +39,9 @@ body {
 
 .london {
   background-image: url("../images/london.png");
-  background-size: cover;
+  background-size: contain;
   background-position: left;
+  background-repeat: no-repeat;
   /* display: block; */
   /* position: absolute;
   top: 53%;
@@ -48,8 +50,9 @@ body {
 
 .madrid {
   background-image: url("../images/madrid.jpg");
-  background-size: cover;
-  background-position: left;
+  background-size: contain;
+  background-position: left
+  background-repeat: no-repeat;;
   /* display: block; */
   /* position: absolute;
   top: 90%;
@@ -58,8 +61,9 @@ body {
 
 .rome {
   background-image: url("../images/rome.jpg");
-  background-size: cover;
+  background-size: contain;
   background-position: left;
+  background-repeat: no-repeat;
   /* display: block; */
   /* position: absolute;
   top: 124%;
