--- a/css/style.css
+++ b/css/style.css
@@ -7,21 +7,21 @@ body {
   font-size: 10px;
 }
 
-/* .container {
+.container {
   font-weight: bold;
   padding: 5% 0;
   text-align: center;
   text-transform: uppercase;
 } */
 
-/* h1 {
+h1 {
   width: 100%;
-} */
+}
 
 .preview {
-  /* height: 15em;
+  height: 15em;
   margin: 0 auto;
-  text-transform: capitalize; */
+  text-transform: capitalize;
   width: 280px;
   height: 200px;
 }
@@ -31,10 +31,10 @@ body {
   background-size: contain;
   background-position: left;
   background-repeat: no-repeat;
-  /* display: block; */
-  /* position: absolute;
+  display: block; */
+  position: absolute;
   top: 13%;
-  left: 38%; */
+  left: 38%;
 }
 
 .london {
@@ -42,10 +42,10 @@ body {
   background-size: contain;
   background-position: left;
   background-repeat: no-repeat;
-  /* display: block; */
-  /* position: absolute;
+  display: block; */
+  position: absolute;
   top: 53%;
-  left: 38%; */
+  left: 38%;
 }
 
 .madrid {
@@ -53,10 +53,10 @@ body {
   background-size: contain;
   background-position: left
   background-repeat: no-repeat;;
-  /* display: block; */
-  /* position: absolute;
+  display: block; */
+  position: absolute;
   top: 90%;
-  left: 38%; */
+  left: 38%;
 }
 
 .rome {
@@ -64,15 +64,15 @@ body {
   background-size: contain;
   background-position: left;
   background-repeat: no-repeat;
-  /* display: block; */
-  /* position: absolute;
+  display: block; */
+  position: absolute;
   top: 124%;
-  left: 38%; */
+  left: 38%;
 }
 
-/* @media screen (min-width: 575px) {
+@media screen (min-width: 575px) {
   .preview {float: left;
-            width: 48%; */
+            width: 48%;
   }
 
 }
