--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 *, *:before, *:after {
-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -7,72 +7,82 @@ body {
   font-size: 10px;
 }
 
+/* CONTAINER */
 .container {
-  font-weight: bold;
+  margin: 0 auto;
   padding: 5% 0;
   text-align: center;
   text-transform: uppercase;
-} */
-
-h1 {
   width: 100%;
 }
 
-.preview {
-  height: 15em;
-  margin: 0 auto;
-  text-transform: capitalize;
-  width: 280px;
-  height: 200px;
+.container > h1 {
+  font-family: sans-serif;
+  font-size: 1.4em;
+  letter-spacing: .2em;
+  margin: 30px 0;
+  text-align: center;
+  text-transform: uppercase;
 }
 
-.baku {
-  background-image: url("../images/baku.jpg");
-  background-size: contain;
+/* PREVIEW */
+.preview {
   background-position: left;
   background-repeat: no-repeat;
-  display: block; */
-  position: absolute;
-  top: 13%;
-  left: 38%;
+  background-size: cover;
+  height: 200px;
+  margin: 0 auto;
+  text-transform: capitalize;
+  width: 100%;
+}
+
+.preview h1 {
+  font-size: 2.4em;
+  padding: 10%;
+  text-align: left;
+}
+
+/* CITIES */
+.baku {
+  background-image: url("../images/baku.jpg");
 }
 
 .london {
   background-image: url("../images/london.png");
-  background-size: contain;
-  background-position: left;
-  background-repeat: no-repeat;
-  display: block; */
-  position: absolute;
-  top: 53%;
-  left: 38%;
 }
 
 .madrid {
   background-image: url("../images/madrid.jpg");
-  background-size: contain;
-  background-position: left
-  background-repeat: no-repeat;;
-  display: block; */
-  position: absolute;
-  top: 90%;
-  left: 38%;
 }
 
 .rome {
   background-image: url("../images/rome.jpg");
-  background-size: contain;
-  background-position: left;
-  background-repeat: no-repeat;
-  display: block; */
-  position: absolute;
-  top: 124%;
-  left: 38%;
 }
 
-@media screen (min-width: 575px) {
-  .preview {float: left;
-            width: 48%;
+/* MEDIA QUERIES */
+@media (min-width: 600px) {
+  .container {
+    margin: 0 auto;
+    width: 80%;
   }
 
+  .preview {
+    float: right;
+    height: 200px;
+    margin: 1% 1%;
+    width: 48%;
+  }
+}
+
+@media (min-width: 900px) {
+  .container {
+    width: 70%;
+  }
+
+  .preview {
+    float: left;
+    height: 200px;
+    margin: 2em 1%;
+    width: 23%;
+  }
 }
